[tool.poetry]
name = "Symmetric"
version = "0.0.4"
description = "A simple wrapper over Flask to speed up basic API deployments."
authors = ["Daniel Leal <dlleal@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
