[tool.poetry]
name = "symmetric"
version = "3.4.1"
description = "A powerful yet lean wrapper over Flask to massively speed up API creations and enable super fast module-to-API transformations."
license = "MIT"
authors = ["Daniel Leal <dlleal@uc.cl>"]
maintainers = ["Daniel Leal <dlleal@uc.cl>"]
readme = "README.md"
homepage = "https://symmetric.one/"
repository = "https://github.com/daleal/symmetric"
documentation = "https://symmetric.one/docs/basic-usage/"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "symmetric" },
]
exclude = [
    ".github",
    ".flake8",
    ".pylintrc",
    "assets",
    "docs",
    "environment.sh"
]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pylint = "^2.4.4"

[tool.poetry.plugins."console_scripts"]
symmetric = "symmetric.cli.core:dispatcher"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/daleal/symmetric/issues"
